[tool.poetry]
name = "pigeon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
antlr4-python3-runtime = "^4.9.1"
graphviz = "^0.16"
pygraphviz = "^1.7"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
