[tool.poetry]
name = "pigeon"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
antlr4-python3-runtime = "4.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
Sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
